Update project files

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* فونت فارسی جذاب */
 @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
 
 body {
@@ -137,35 +136,33 @@ h1, h2 {
     }
 }
 
-/* استایل مودال */
+
 .modal {
-    display: none; /* به صورت پیش‌فرض مخفی است */
+    display: none; 
     position: fixed;
-    z-index: 1; /* در بالای محتوا قرار می‌گیرد */
+    z-index: 1; 
     left: 0;
     top: 0;
     width: 100%;
     height: 80%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4); /* پس‌زمینه تاریک */
+    background-color: rgba(0, 0, 0, 0.4); 
     padding-top: 60px;
 }
 
-/* استایل محتوای مودال */
 .modal-content {
     background-color: #fff;
     margin: 5% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    max-width: 400px; /* اندازه محدود */
+    max-width: 400px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: right;
 
 }
 
-/* دکمه بستن مودال */
 .close {
     color: #aaa;
     float: right;
@@ -181,7 +178,6 @@ h1, h2 {
     cursor: pointer;
 }
 
-/* استایل عنوان مودال */
 .modal-content h2 {
     font-size: 24px;
     margin-bottom: 20px;
@@ -190,15 +186,10 @@ h1, h2 {
     text-align: center;
 }
 
-/* استایل متن داخل مودال */
 .modal-content p {
     font-size: 18px;
     color: #3a3a3a;
     line-height: 1.6;
 }
 
-/* تغییر رنگ شماره تلفن و آیدی */
-.modal-content p span {
-    color: #0066cc;
-    font-weight: bold;
-}
+
